--- a/201507/sum.html
+++ b/201507/sum.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="//cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center">爱客仕前端组 <b>2015年09月</b> 工作汇总</h1>
+      <h1 class="text-center">爱客仕前端组 <b>2015年07月</b> 工作汇总</h1>
       <table class="table table-bordered table table-hover table-striped">
         <tr>
           <td>Date</td>
           <td>Week</td>
+          <td>Incident</td>
           <td>李四</td>
           <td>王五</td>
           <td>赵六</td>
@@ -17,7 +18,8 @@
         </tr>
         <tr>
           <td>1</td>
-          <td>二</td>
+          <td>三</td>
+          <td></td>
           <td>Angular</td>
           <td>Animate.css</td>
           <td></td>
@@ -25,7 +27,8 @@
         </tr>
         <tr>
           <td>2</td>
-          <td>三</td>
+          <td>四</td>
+          <td></td>
           <td>React</td>
           <td></td>
           <td></td>
@@ -33,7 +36,8 @@
         </tr>
         <tr>
           <td>3</td>
-          <td>四</td>
+          <td>五</td>
+          <td></td>
           <td>Ember</td>
           <td>Gulp</td>
           <td></td>
@@ -41,7 +45,8 @@
         </tr>
         <tr>
           <td>4</td>
-          <td>五</td>
+          <td>六</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -49,7 +54,8 @@
         </tr>
         <tr>
           <td>5</td>
-          <td>六</td>
+          <td>日</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -57,7 +63,8 @@
         </tr>
         <tr>
           <td>6</td>
-          <td>日</td>
+          <td>一</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -65,7 +72,8 @@
         </tr>
         <tr>
           <td>7</td>
-          <td>一</td>
+          <td>二</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -73,7 +81,8 @@
         </tr>
         <tr>
           <td>8</td>
-          <td>二</td>
+          <td>三</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -81,7 +90,8 @@
         </tr>
         <tr>
           <td>9</td>
-          <td>三</td>
+          <td>四</td>
+          <td></td>
           <td></td>
           <td>Grunt</td>
           <td></td>
@@ -89,7 +99,8 @@
         </tr>
         <tr>
           <td>10</td>
-          <td>四</td>
+          <td>五</td>
+          <td></td>
           <td></td>
           <td></td>
           <td>webpack</td>
@@ -97,7 +108,8 @@
         </tr>
         <tr>
           <td>11</td>
-          <td>五</td>
+          <td>六</td>
+          <td></td>
           <td></td>
           <td></td>
           <td>webpack</td>
@@ -105,7 +117,8 @@
         </tr>
         <tr>
           <td>12</td>
-          <td>六</td>
+          <td>日</td>
+          <td></td>
           <td></td>
           <td></td>
           <td>webpack</td>
@@ -113,7 +126,8 @@
         </tr>
         <tr>
           <td>13</td>
-          <td>日</td>
+          <td>一</td>
+          <td></td>
           <td></td>
           <td></td>
           <td>webpack</td>
@@ -121,7 +135,8 @@
         </tr>
         <tr>
           <td>14</td>
-          <td>一</td>
+          <td>二</td>
+          <td></td>
           <td></td>
           <td></td>
           <td>webpack</td>
@@ -129,7 +144,8 @@
         </tr>
         <tr>
           <td>15</td>
-          <td>二</td>
+          <td>三</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -137,7 +153,8 @@
         </tr>
         <tr>
           <td>16</td>
-          <td>三</td>
+          <td>四</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -145,7 +162,8 @@
         </tr>
         <tr>
           <td>17</td>
-          <td>四</td>
+          <td>五</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -153,7 +171,8 @@
         </tr>
         <tr>
           <td>18</td>
-          <td>五</td>
+          <td>六</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -161,7 +180,8 @@
         </tr>
         <tr>
           <td>19</td>
-          <td>六</td>
+          <td>日</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -169,7 +189,8 @@
         </tr>
         <tr>
           <td>20</td>
-          <td>日</td>
+          <td>一</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -177,7 +198,8 @@
         </tr>
         <tr>
           <td>21</td>
-          <td>一</td>
+          <td>二</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -185,7 +207,8 @@
         </tr>
         <tr>
           <td>22</td>
-          <td>二</td>
+          <td>三</td>
+          <td></td>
           <td></td>
           <td></td>
           <td>backbone</td>
@@ -193,7 +216,8 @@
         </tr>
         <tr>
           <td>23</td>
-          <td>三</td>
+          <td>四</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -201,7 +225,8 @@
         </tr>
         <tr>
           <td>24</td>
-          <td>四</td>
+          <td>五</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -209,7 +234,8 @@
         </tr>
         <tr>
           <td>25</td>
-          <td>五</td>
+          <td>六</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -217,7 +243,8 @@
         </tr>
         <tr>
           <td>26</td>
-          <td>六</td>
+          <td>日</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -225,7 +252,8 @@
         </tr>
         <tr>
           <td>27</td>
-          <td>日</td>
+          <td>一</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -233,7 +261,8 @@
         </tr>
         <tr>
           <td>28</td>
-          <td>一</td>
+          <td>二</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -241,7 +270,8 @@
         </tr>
         <tr>
           <td>29</td>
-          <td>二</td>
+          <td>三</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -249,7 +279,17 @@
         </tr>
         <tr>
           <td>30</td>
-          <td>三</td>
+          <td>四</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>31</td>
+          <td>五</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
