rename html add build status

--- a/201507/_SUM_.html
+++ b/201507/_SUM_.html
@@ -12,6 +12,7 @@
           <td>Week</td>
           <td>Incident</td>
           <td>李四</td>
+          <td>travis</td>
           <td>王五</td>
           <td>赵六</td>
           <td>张三</td>
@@ -21,6 +22,7 @@
           <td>三</td>
           <td></td>
           <td>Angular</td>
+          <td></td>
           <td>Animate.css</td>
           <td></td>
           <td>css</td>
@@ -32,6 +34,7 @@
           <td>React</td>
           <td></td>
           <td></td>
+          <td></td>
           <td>js</td>
         </tr>
         <tr>
@@ -39,6 +42,7 @@
           <td>五</td>
           <td></td>
           <td>Ember</td>
+          <td></td>
           <td>Gulp</td>
           <td></td>
           <td>html</td>
@@ -46,6 +50,7 @@
         <tr>
           <td>4</td>
           <td>六</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -60,10 +65,12 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>6</td>
           <td>一</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -78,6 +85,7 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>8</td>
@@ -87,10 +95,12 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>9</td>
           <td>四</td>
+          <td></td>
           <td></td>
           <td></td>
           <td>Grunt</td>
@@ -103,12 +113,14 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
           <td>webpack</td>
           <td></td>
         </tr>
         <tr>
           <td>11</td>
           <td>六</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -121,6 +133,7 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
           <td>webpack</td>
           <td></td>
         </tr>
@@ -130,12 +143,14 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
           <td>webpack</td>
           <td></td>
         </tr>
         <tr>
           <td>14</td>
           <td>二</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -150,10 +165,12 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>16</td>
           <td>四</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -168,10 +185,12 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>18</td>
           <td>六</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -186,10 +205,12 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>20</td>
           <td>一</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -204,10 +225,12 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>22</td>
           <td>三</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -222,10 +245,12 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>24</td>
           <td>五</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -240,10 +265,12 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>26</td>
           <td>日</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -258,10 +285,12 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>28</td>
           <td>二</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -276,6 +305,7 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>30</td>
@@ -285,10 +315,12 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td>31</td>
           <td>五</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
