generate md with lodash

--- a/201507/_SUM_.html
+++ b/201507/_SUM_.html
@@ -21,7 +21,7 @@
           <td>1</td>
           <td>三</td>
           <td></td>
-          <td>Angular</td>
+          <td>&lt;Angular&gt;</td>
           <td></td>
           <td>Animate.css</td>
           <td></td>
@@ -31,7 +31,7 @@
           <td>2</td>
           <td>四</td>
           <td></td>
-          <td>React</td>
+          <td>&lt;React&gt;</td>
           <td></td>
           <td></td>
           <td></td>
