--- a/201507/_SUM_.html
+++ b/201507/_SUM_.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center">爱客仕前端组 <b>2015年07月</b> 工作汇总</h1>
+      <h1 class="text-center">前端组 <b>2015年07月</b> 工作汇总</h1>
       <table class="table table-bordered table table-hover table-striped">
         <tr>
           <td>Date</td>
